--- a/v2.html
+++ b/v2.html
@@ -59,7 +59,7 @@
             </h1>
             
             <p class="hero-description">
-              幾徳祭をともに盛り上げてくれる仲間、大募集！！ 新入生大歓迎！一緒に大学生活を盛り上げよう！
+              幾徳祭をともに盛り上げてくれる仲間、大募集！！
             </p>
             
             <div class="hero-buttons">
@@ -287,7 +287,7 @@
           </div>
 
           <div class="join-section">
-            <h4 class="join-section-title">入いるには？</h4>
+            <h4 class="join-section-title">入るには？</h4>
             <p>
               ガイダンスに参加して、その場で名前を書くだけ！
               <br>
