メッセージ変更

--- a/v3.html
+++ b/v3.html
@@ -173,71 +173,58 @@
     </section>
 
     <!-- メンバー紹介 -->
-    <section id="members" class="section-bg-light">
+    <section id="members" class="section-bg-light" style="padding-top: 20px;">
       <div class="container">
-        <div class="section-header">
+        <div class="section-header" style="margin-bottom: 10px;">
           <h2 class="section-title">
             <span class="section-title-accent">先輩</span>からのメッセージ
           </h2>
           <p class="section-description">現役メンバーからのリアルな声をお届け！</p>
         </div>
 
-        <div class="members-cards">
-          <div class="member-card">
-            <div class="member-avatar">
-              <div class="member-avatar-inner">
-                <img src="https://placehold.jp/100x100.png" alt="山田太郎さん" class="member-avatar-image">
-              </div>
-            </div>
+        <div class="members-cards" style="margin-top: 0;">
+          <div class="member-card" style="margin-top: 0; padding-top: 0;">
             <div class="member-content">
               <div class="member-info">
-                <h3 class="member-name">齋 颯平</h3>
+                <h3 class="member-name">齋颯平</h3>
                 <p class="member-department">情報学部3年</p>
               </div>
               <div class="member-message">
                 <p class="member-quote">
-                  「イベント局に入って本当に良かった！企画を考えるのは大変だけど、
-                  イベントが成功したときの達成感がたまらない！ 大学生活で一番の思い出になってます！」
+                 授業が終わったら、イベント局室でレポートやったり、ゲームやったりしてくつろいでいます。 
+                早く帰りたい。
                 </p>
               </div>
             </div>
           </div>
 
-          <div class="member-card">
-            <div class="member-avatar">
-              <div class="member-avatar-inner">
-                <img src="https://placehold.jp/100x100.png" alt="佐藤花子さん" class="member-avatar-image">
-              </div>
-            </div>
+          <div class="member-card" style="margin-top: 0; padding-top: 0;">
             <div class="member-content">
               <div class="member-info">
-                <h3 class="member-name">佐藤花子</h3>
+                <h3 class="member-name">樋口真弥</h3>
                 <p class="member-department">情報学3年</p>
               </div>
               <div class="member-message">
                 <p class="member-quote">
-                  「最初は不安だったけど、先輩たちが優しくて楽しい！ イベントを通じて友達もたくさんできたし、
-                  大学生活が充実してます！新入生のみんなも絶対来てね！」
+                  べ、別に新入生が入らなくても、オレっちは全然困んないんだけどさ…
+                  ま、学園祭が盛り上がった方がいいに決まってんだろ？
+                  しょうがないから、入ってきてくれてもいいけど！
                 </p>
               </div>
             </div>
           </div>
 
-          <div class="member-card">
-            <div class="member-avatar">
-              <div class="member-avatar-inner">
-                <img src="https://placehold.jp/100x100.png" alt="鈴木一郎さん" class="member-avatar-image">
-              </div>
-            </div>
+          <div class="member-card" style="margin-top: 0; padding-top: 0;">
             <div class="member-content">
               <div class="member-info">
-                <h3 class="member-name">鈴木一郎</h3>
-                <p class="member-department">工学部3年</p>
+                <h3 class="member-name">高橋怜</h3>
+                <p class="member-department">バイオ3年</p>
               </div>
               <div class="member-message">
                 <p class="member-quote">
-                  「3年間イベント局で活動して、本当に充実した大学生活だった！
-                  就活でもイベント局での経験が評価されたよ。 後輩たちにもこの楽しさを味わってほしい！」
+                  大学生活、俺レベルになると学園祭実行委員に入るのは常識だけど、
+                  まあ新入生には難しいかな。
+                  でも安心しろ、俺が直接指導してやるから。
                 </p>
               </div>
             </div>
