メッセージ変更

--- a/v3.html
+++ b/v3.html
@@ -206,9 +206,8 @@
               </div>
               <div class="member-message">
                 <p class="member-quote">
-                  べ、別に新入生が入らなくても、オレっちは全然困んないんだけどさ…
-                  ま、学園祭が盛り上がった方がいいに決まってんだろ？
-                  しょうがないから、入ってきてくれてもいいけど！
+                  イベント局に入って学園祭の運営に関わるのは、大変のこともあるけどすごく楽しいよ！
+                  新入生の皆が入ってくれるのを楽しみにして待ってるね！
                 </p>
               </div>
             </div>
