メッセージ変更

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
               </div>
               <div class="member-message">
                 <p class="member-quote">
-                 授業が終わったら、イベント局室でレポートやったり、ゲームやったりしてくつろいでいます。 
-                早く帰りたい。
+                履歴書には、書けないけど、ガクチカにはかけます。 
+                人がすくないので、入ってほしいです。 
                 </p>
               </div>
             </div>
