メッセージ変更

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <p>
               計画中！
               <br>
-              <span class="join-note">※計画中です！/span>
+              <span class="join-note">※計画中です！</span>
             </p>
           </div>
 
