メッセージ絵文字追加

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
               </div>
               <div class="member-message">
                 <p class="member-quote">
-                履歴書には、書けないけど、ガクチカにはかけます。 
-                人がすくないので、入ってほしいです。 
+                履歴書には、書けないけど、ガクチカにはかけるよ💖
+                人がすくないので、入ってほしいな✨
                 </p>
               </div>
             </div>
@@ -206,8 +206,8 @@
               </div>
               <div class="member-message">
                 <p class="member-quote">
-                  イベント局に入って学園祭の運営に関わるのは、大変のこともあるけどすごく楽しいよ！
-                  新入生の皆が入ってくれるのを楽しみにして待ってるね！
+                  イベント局に入って学園祭の運営に関わるのは、大変なこともあるけどすごく楽しいよ！🎉✨
+                  新入生の皆が入ってくれるのを楽しみにして待ってるね！🌸😊
                 </p>
               </div>
             </div>
@@ -221,7 +221,7 @@
               </div>
               <div class="member-message">
                 <p class="member-quote">
-                  イベントを成功させるために大変なこともあったけど、学園祭を成功させる達成感が良かった。
+                  イベントを成功させるために大変なこともあったけど、学園祭を成功させる達成感が良かった。😊
                 </p>
               </div>
             </div>
@@ -258,7 +258,7 @@
             <ul class="join-list">
               <li class="join-list-item">
                 <span class="join-dot">●</span>
-                <span>４月２１日～２５日 １７：３０～１８：３０かもめ食堂</span>
+                <span>4月21日～4月25日 | 17：30～18：30 K3号館2階かもめ食堂</span>
               </li>
             </ul>
           </div>
