メッセージ絵文字追加

--- a/index.html
+++ b/index.html
@@ -314,9 +314,10 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#00c853" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"></path>
                   </svg>
-                  <span>X(旧Twitter)：@kait_jikkou</span>
+                  <span>X(旧Twitter)：<a href="https://x.com/kait_jikkou" target="_blank">@kait_jikkou</a></a></span>
                 </li>
                 <li class="contact-list-item">メール：ikutoku.jikkou@gmail.com</li>
+                <li class="contact-list-item"><a href="https://marshmallow-qa.com/lofvvbm7yf4rk07?t=z4b4a8&utm_medium=url_text&utm_source=promotion" target="_blank">マシュマロ</a></li>
               </ul>
             </div>
 
