メッセージ絵文字追加

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <span class="section-title-accent">イベント局</span>ってどんなところ？
           </h2>
           <p class="section-description">
-            私たちは神奈川工科大学の学園祭「幾徳祭」の運営を行うクラブです。
+            私たちは神奈川工科大学の学園祭「幾徳祭」の運営を行う団体です。
             11月にある幾徳祭に向けて、1年間を通し、縁の下の力持ちとして事務作業を中心に活動しています！
           </p>
         </div>
