--- a/v4.html
+++ b/v4.html
@@ -53,7 +53,7 @@
               <div class="hero-char">れ</div>
             </div>
              -->
-            <img src="img/ibekyoku_logo.png" alt="学友会イベント局ロゴ" class="hero-logo">
+            <img src="img/ibekyoku_logo.png" alt="学友会イベント局ロゴ" style="max-width: 600px; margin-bottom: 16px;">
             <!-- <h1 class="hero-title">
               <span class="hero-title-white">学友会</span>
               <span class="hero-title-yellow">イベント局</span>
@@ -71,7 +71,7 @@
           </div>
           
           <div class="hero-image">
-            <img src="img/huraitokun.jpg" alt="学園祭の様子" class="hero-img">
+            <img src="img/huraitokun.jpg" alt="学園祭の様子">
           </div>
         </div>
       </div>
