メッセージついか

--- a/index.html
+++ b/index.html
@@ -182,8 +182,26 @@
           <p class="section-description">現役メンバーからのリアルな声をお届け！</p>
         </div>
 
-        <div class="members-cards" style="margin-top: 0;">
-          <div class="member-card" style="margin-top: 0; padding-top: 0;">
+        <div class="members-cards">
+          <div class="member-card">
+            <div class="member-content">
+              <div class="member-info">
+                <h3 class="member-name">笠松琉斗</h3>
+                <p class="member-department">情報学3年</p>
+              </div>
+              <div class="member-message">
+                <p class="member-quote">
+                  新入生へ <br>
+                  うぃーす。どうも先輩でーす。 <br>
+                  単位の事から大学以外のことまでなんでも聞くよー🤔💭 <br>
+                  大学生活を充実させて、最高の幾徳祭つくろうや👍 <br>
+                  ゲーム🎮、お菓子🍭🍬🍫🍿🍩置いてやや待ってるよ〜👀👀👀
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="member-card">
             <div class="member-content">
               <div class="member-info">
                 <h3 class="member-name">齋颯平</h3>
@@ -198,7 +216,7 @@
             </div>
           </div>
 
-          <div class="member-card" style="margin-top: 0; padding-top: 0;">
+          <div class="member-card">
             <div class="member-content">
               <div class="member-info">
                 <h3 class="member-name">樋口真弥</h3>
@@ -213,7 +231,7 @@
             </div>
           </div>
 
-          <div class="member-card" style="margin-top: 0; padding-top: 0;">
+          <div class="member-card">
             <div class="member-content">
               <div class="member-info">
                 <h3 class="member-name">高橋怜</h3>
@@ -226,8 +244,6 @@
               </div>
             </div>
           </div>
-
-
         </div>
       </div>
     </section>
